--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,14 @@ jobs:
       run: |
         npm install
         
+    - name: Remove leftovers from tests
+      run: |
+        rm -rf src/__test__/
+        
+    - name: Remove coverage 
+      run: |
+        rm -rf src/coverage
+        
     - name: Loigin to Heroku Container
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
