--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Alejandro Cotrez <acortez.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "expess": "0.0.1-security"
+    "expess": "0.0.1-security",
+    "express": "^4.17.1",
+    "jest": "^25.5.4"
   }
 }
