--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -44,3 +44,5 @@ jobs:
 
       - name: Push to master
         uses: tcitry/push-to-master@v1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
