--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -43,5 +43,24 @@ jobs:
         run: npm test --if-present
 
       - name: Push to master
+        env: 
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git push origin/master
+          REF=$1
+          if [ -z $1 ]; then
+              REF='master:refs/heads/master'
+          fi
+
+          if [ -z "${TOKEN}" ]; then
+            TOKEN=${GITHUB_TOKEN}
+          fi
+
+          REMOTE_REPO="https://${TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+          cd "${GITHUB_WORKSPACE}" || exit 1
+          rm -rf .git
+          git init
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git add .
+          git commit -m 'CI Auto merge'
+          git push --force $REMOTE_REPO master:$REF
