--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -63,4 +63,4 @@ jobs:
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add .
           git commit -m 'CI Auto merge'
-          git push --force $REMOTE_REPO master:$REF
+          git push --force $REMOTE_REPO origin:$REF
