--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           REF=$1
           if [ -z $1 ]; then
-              REF='master:refs/heads/master'
+              REF='master'
           fi
 
           if [ -z "${TOKEN}" ]; then
@@ -57,10 +57,11 @@ jobs:
 
           REMOTE_REPO="https://${TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
           cd "${GITHUB_WORKSPACE}" || exit 1
+          echo $REMOTE_REPO 
           rm -rf .git
           git init
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add .
           git commit -m 'CI Auto merge'
-          git push --force $REMOTE_REPO origin:$REF
+          git push --force $REMOTE_REPO master:$REF
